# lgtm

./: .gitignore  README.md
aknng/: CMakeLists.txt  README.md  config.json  main.cpp
aknng/include/: aknng.hpp  mylib.hpp
data/: sift_base_sample.csv  sift_query_sample.csv
hnsw/: CMakeLists.txt  README.md  config.json  main.cpp
hnsw/include/: hnsw.hpp
index/aknng/: sift_base_sample_d10.csv
lgtm/: CMakeLists.txt  README.md  config.json  main.cpp
lgtm/include/: graph.hpp  lgtm.hpp  lsh.hpp  mylib.hpp
nsg/: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
nsg/include/: nsg.hpp
result/hnsw/: log-k10-m10-ef10.csv  result-k10-m10-ef10.csv
result/lgtm/: log-k10-m3w200d10t8-start50ef10.csv  result-k10-m3w200d10t8-start50ef10.csv
result/nsg/: log-k10-m10-l10.csv  result-k10-m10-l10.csv
result/scan/: log.csv  result.csv
scan-knn-search/: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
scan-knn-search/include/: json.hpp  mylib.hpp
